master_worker/produccion/ingress/00-ingress-diaco.yml
# INGRESS CERTIFICATE SSL
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: diaco
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-staging
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issue-temporary-certificate: "true"
spec:
  tls:
    - hosts:
      - diacoenlinea.diaco.gob.gt
      secretName: diaco-server-secret
  rules:
  - host: diacoenlinea.diaco.gob.gt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: linea-qa
            port:
              number: 80
