master_worker/produccion/ingress/00-ingress-rgm.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rgm
  namespace: rgm
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
        - dev.rgm.gob.gt
      secretName: server-secret-rgm
    - hosts:
        - inv.rgm.gob.gt
      secretName: server-secret-rgm
#    - hosts:
#        - qabancos.rgm.gob.gt
#      secretName: server-secret-rgm
#  rules:
#    - host: qabancos.rgm.gob.gt
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: service-rgm-payara-bancos
#                port:
#                  number: 80
    - host: dev.rgm.gob.gt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payara-server-rgm
                port:
                  number: 80
    - host: inv.rgm.gob.gt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inv-server-rgm
                port:
                  number: 80
